--- a/sites.html
+++ b/sites.html
@@ -36,7 +36,7 @@
 		<script>
 
 			var map;
-			const iconBase = "https://developers.google.com/maps/documentation/javascript/examples/full/images/";
+			// const iconBase = "https://developers.google.com/maps/documentation/javascript/examples/full/images/";
 			const Blue = "http://maps.google.com/mapfiles/ms/icons/blue-dot.png"
 			const Red = "http://maps.google.com/mapfiles/ms/icons/red-dot.png"
 
